Implement new Java GC logging settings, and move them into variables (tomcat_java_gc_log and tomcat_java_gc_log_old)